# CountryCapital

./: README.md
client/: CMakeLists.txt  client
client/src/: main.cpp
docker/: Dockerfile.client  Dockerfile.server  runServer.sh
server/: CMakeLists.txt  server
server/src/: main.cpp
